--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ title: Liu-Cheng Xu
 email: xuliuchengxlc@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     The world is indeed a stage and we are merely players.
-baseurl: /blog-cn # the subpath of your site, e.g. /blog
+baseurl: # the subpath of your site, e.g. /blog
 lang: "en"
-url: "liuchengxu.github.io" # the base hostname & protocol for your site
+url:  # the base hostname & protocol for your site
 twitter_username:
 github_username:  liuchengxu
 disqus_username:
