--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Liu-Cheng Xu
 email: xuliuchengxlc@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     The world is indeed a stage and we are merely players.
-baseurl:  # the subpath of your site, e.g. /blog
+baseurl: /blog-cn  # the subpath of your site, e.g. /blog
 lang: "en"
 url:  # the base hostname & protocol for your site
 twitter_username:
